--- a/src/CSS/Sidebar.css
+++ b/src/CSS/Sidebar.css
@@ -4,8 +4,8 @@
 }
 
 .sidebar {
-    border: 2px solid darkslateblue;
     display: inline-block;
-    padding: 20px;
-
+    padding: 50px;
+    width: 200px;
 }
+
