--- a/src/CSS/Trends.css
+++ b/src/CSS/Trends.css
@@ -1,6 +1,10 @@
 .Trends {
-    border: 2px solid crimson;
+    border-radius: 5px;
     padding: 20px;
     display: inline-block;
-        vertical-align: middle;
+    vertical-align: middle;
+    width: 100%;
+    margin-bottom: 30px;
+    background-color: white;
+    border: 1px solid rgba(0,0,0,0.15);
 }
